--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Privacy Policy</h1>
 
-  <h2>プライバシーポリシー（日本語）</h2>
+  <h2>プライバシーポリシー</h2>
   <p>
     本アプリ（以下「当アプリ」）は、ユーザーの個人情報を取得・保存しません。
   </p>
